[package]
name = "web3-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
  "hash-utils",
  "helpers",
  "keystore",
  "signature",
  "signers",
  "transaction"
]

[dependencies]
web3-hash-utils = { path = "./hash-utils" }
web3-keystore = { path = "./keystore" }
web3-signature = { path = "./signature" }
web3-signers = { path = "./signers" }
web3-transaction = { path = "./transaction" }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
hex = "0.4"
serde_json = "1"
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
round-based = "0.1"
reqwest = "0.11.9"
url = "2.2.2"

# So we can use Http::new_with_client() to fix
# the reqwest idle problem, see: https://github.com/hyperium/hyper/issues/2136
[dev-dependencies.ethers-providers]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[dev-dependencies.ethers-core]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[dev-dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
branch = "master"
default-features = false
