[package]
name = "web3-address"
version = "0.1.0"
edition = "2021"
description = "Address type for web3 public keys"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
k256 = { version = "0.11", features = ["ecdsa", "sha256", "keccak256"] }
subtle = "2.4"
sha3 = "0.9"
hex = { version = "0.4", features = ["serde"] }

[features]
ethereum = []

[dev-dependencies]
anyhow = "1"
