[package]
name = "web3-address"
version = "0.1.0"
edition = "2021"
description = "Address type for web3 public keys"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

k256 = { version = "0.11", features = ["ecdsa", "sha256", "keccak256"], optional = true }
subtle = { version = "2.4", optional = true }
sha3 = { version = "0.9", optional = true }
hex = { version = "0.4", features = ["serde"], optional = true }

[features]
ethereum = ["k256", "subtle", "sha3", "hex"]

[dev-dependencies]
anyhow = "1"
