[package]
name = "web3-helpers"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "generate-mpc-keys"

[dependencies]
anyhow = "1"
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
round-based = "0.1"
serde_json = "1"

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
branch = "master"
default-features = false

[[bin]]
name = "generate-mpc-keys"
path = "src/generate-mpc-keys.rs"
