[package]
name = "web3-keystore"
version = "0.4.1"
authors = ["Muji <muji@tmpfs.org>", "Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Library to encrypt and decrypt keystores"
documentation = "https://docs.rs/web3-keystore"
repository = "https://github.com/tmpfs/web3-keystore"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet", "keystore"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.8"
ctr = "0.9"
digest = "0.10.3"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.0"
pbkdf2 = "0.10.0"
rand = "0.8.5"
scrypt = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.1"
sha3 = "0.10.0"
thiserror = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[dev-dependencies]
serde_json = "1"
anyhow = "1"
