[package]
name = "web3-signature"
version = "0.4.0"
edition = "2021"
authors = ["Muji <muji@tmpfs.org>"]
license = "MIT OR Apache-2.0"
description = "Type to represent ECDSA signatures"
documentation = "https://docs.rs/web3-signature"
repository = "https://github.com/tmpfs/web3-core"
keywords = ["ethereum", "web3", "wallet", "sign", "ECDSA"]

[dependencies]
ethereum-types = "0.13"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
hex = "0.4"
k256 = { version = "0.13.1", optional = true, features = ["ecdsa"] }

[features]
single-party = ["k256"]
