[package]
name = "web3-signers"
version = "0.1.0"
edition = "2021"
authors = ["Muji <muji@tmpfs.org>"]
license = "Apache-2.0"
description = "Library for ECDSA signatures"
documentation = "https://docs.rs/web3-signers"
repository = "https://github.com/tmpfs/web3-signers"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet", "sign", "ECDSA"]

[dependencies]
web3-signature = { version = "0.2", path = "../signature" }
web3-transaction = { version = "0.1", path = "../transaction" }
web3-hash-utils = { version = "1", path = "../hash-utils" }
ethereum-types = "0.13"
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
sha2  = "0.9"
sha3 = "0.9"
elliptic-curve = "0.11"
k256 = { version = "0.11.6", features = ["ecdsa", "keccak256"] }
rand_core = "0.6"
coins-bip39 = "0.7"
coins-bip32 = "0.7"

# NOTE: this includes an older version of rand!
bip39 = { version = "1", features = ["rand"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
