[package]
name = "web3-transaction"
version = "0.1.0"
edition = "2021"
authors = ["Muji <muji@tmpfs.org>", "Georgios Konstantopoulos <me@gakonst.com>"]
license = "Apache-2.0"
description = "Types for performing transactions"
documentation = "https://docs.rs/web3-transactions"
repository = "https://github.com/tmpfs/web3-core"
readme = "README.md"
keywords = ["ethereum", "web3", "transaction"]

[dependencies]
web3-hash-utils = "1"
web3-signature = { version = "0.3", path = "../signature" }
ethereum-types = "0.13"
sha3 = "0.9"
serde = { version = "1", features = ["derive"] }
bytes = { version = "1.1.0", features = ["serde"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }

# eip712 feature enabled dependencies
convert_case = { version = "0.5.0", optional = true }
syn = { version = "1.0.86", optional = true }
quote = { version = "1.0.15", optional = true }
proc-macro2 = { version = "1.0.36", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serde_json = "1"
bincode = { version = "1.3.3", default-features = false }

[features]
celo = ["legacy"] # celo support extends the transaction format with extra fields
legacy = []
eip712 = ["convert_case", "syn", "quote", "proc-macro2"]
